--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -17,17 +17,22 @@
     margin: 0;
 }
 
-.content {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-
-    text-align: center;
-    vertical-align: middle;
-
-    margin: 0;
+.content-wrapper {
     padding: 2rem 2rem;
 
     background-color: white;
     border: 1px solid black;
+}
+
+.content {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
+    text-align: center;
+
+    height: 3rem;
+
+    margin: 0;
 }
