--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -27,8 +27,10 @@
 .content {
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+    white-space: break-spaces;
 
     text-align: center;
 
