--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -24,13 +24,13 @@ select {
     font: inherit;
 }
 
-.main-page {
+.app {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 
     min-width: 100vw;
     min-height: 100vh;
-
+    
     padding: 3rem 1rem;
 
     background-color: #f5f5f5;
