--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -8,35 +8,24 @@ body {
     margin: 0;
 }
 
-img,
-picture,
-video,
-canvas,
-svg {
-    display: block;
-    max-width: 100%;
-}
-
 input,
 button,
-textarea,
-select {
+textarea {
     font: inherit;
 }
 
 .app {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-
-    min-width: 100vw;
-    min-height: 100vh;
     
+    min-height: 100vh;
+
     padding: 3rem 1rem;
 
     background-color: #f5f5f5;
 }
 
-.content-wrapper {
+.appContent {
     max-width: 60rem;
     margin: auto;
 }
