--- a/src/pages/PostsPage/PostsPage.module.css
+++ b/src/pages/PostsPage/PostsPage.module.css
@@ -1,4 +1,4 @@
-.postsPage {
+.posts-page {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -22,6 +22,4 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-
-    list-style-type: none;
 }
